<resources>
    <string name="app_name">splashCalculatorApp</string>
    <string name="calculadora_de_imc">Calculadora de IMC</string>
    <string name="login">Login</string>
    <string name="tv_login">Iniciar sesión</string>
    <string name="tv_email">Usuario</string>
    <string name="tv_password">Clave</string>
    <string name="btn_login">Iniciar sesión</string>
    <string name="tv_weight">Peso (kg)</string>
    <string name="tv_height">Altura (m)</string>
    <string name="btn_calculate_imc">Calcular IMC</string>
    <string name="tv_result">Resultado:</string>
    <string name="error_empty_fields">Por favor, ingresa peso y altura</string>
    <string name="error_invalid_values">Peso y altura deben ser mayores que cero</string>
    <string name="error_numeric_values">Por favor, ingresa valores numéricos válidos</string>
    <string name="bmi_result">Tu IMC es %.2f - %s</string>
    <string name="unknown_category">Categoría desconocida</string>
    <string name="bmi_underweight">Bajo peso</string>
    <string name="bmi_normal">Peso normal</string>
    <string name="bmi_overweight">Sobrepeso</string>
    <string name="bmi_obesity_1">Obesidad grado I</string>
    <string name="bmi_obesity_2">Obesidad grado II</string>
    <string name="bmi_obesity_3">Obesidad grado III</string>
    <string name="login_successful">Login Exitoso</string>
    <string name="login_failed">Usuario o contraseña incorrectos</string>
    <string name="enter_user_pass">Por favor, ingrese usuario y contraseña</string>
    <string name="register">Registro</string>
    <string name="tv_register">Registrarse</string>
    <string name="tv_confirm_password">Confirmar Clave</string>
    <string name="btn_register">Registrarse</string>
    <string name="btn_go_register">¿No tienes una cuenta? Regístrate</string>
    <string name="btn_records">Historial</string>
    <string name="text_imcrecords">Historial</string>
    <string name="weight_height_text">Peso: %1$.2f kg, Altura: %2$.2f m</string>
    <string name="bmi_text">IMC: %1$.2f</string>
    <string name="username_form">Usuario no puede ir vacio</string>
    <string name="password_form">La contraseña no puede ir vacia</string>
    <string name="password_limit">La contraseña debe tener al menos 6 caracteres</string>
    <string name="register_succesfull">Usuario registrado exitosamente</string>
    <string name="register_error">Error al registrar el usuario. Inténtalo de nuevo</string>
    <string name="about_me">Creado por Yorth21</string>
    <string name="about_me_title">Sobre mí</string>
    <string name="tv_back">Regresar</string>
    <string name="tv_r_bmi">IMC</string>
    <string name="text_weight">Peso</string>
    <string name="text_height">Altura</string>
</resources>