<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

            <Button
                android:id="@+id/btn_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/infoTextView" />

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/calculadora_de_imc"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/textViewResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/tv_result"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

            <ImageView
                android:id="@+id/imgResult"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingVertical="8dp"
                android:src="@drawable/normal"
                android:layout_gravity="center" />

            <LinearLayout
                android:id="@+id/linearLayoutForm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:id="@+id/linearLayoutPeso"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/editTextWeight"
                        android:layout_width="match_parent"
                        style="@style/EditTextStyle"
                        android:background="@drawable/edittext_roundend"
                        android:layout_height="wrap_content"
                        android:hint="@string/tv_weight"
                        android:inputType="numberDecimal" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayoutAltura"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/editTextHeight"
                        style="@style/EditTextStyle"
                        android:background="@drawable/edittext_roundend"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/tv_height"
                        android:inputType="numberDecimal" />
                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/buttonCalculate"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:padding="12dp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:background="@drawable/background"
                android:layout_marginTop="24dp"
                android:layout_weight="1"
                android:text="@string/btn_calculate_imc" />

            <Button
                android:id="@+id/buttonViewHistory"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:padding="12dp"
                android:textStyle="bold"
                android:textColor="@color/primary"
                android:background="@drawable/background_dark"
                android:layout_marginTop="24dp"
                android:layout_weight="1"
                android:text="@string/btn_records" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>